@@ -18,6 +18,7 @@ remove = PodCoverageTests
 
 [AutoPrereqs]
 [Prereqs]
+YAML::PP = 0.021
 Log::Log4perl::Appender::ScreenColoredLevels = 0
 
 [MinimumPerl]
